# ask-your-neighbour

./: .gitignore  README.md  main.py  pyproject.toml
containers/: docker-compose.yaml  osm-mcp.Dockerfile
containers/osm-mcp-extras/: __init__.py
docs/: agents_diagram.py  agents_diagram_mermaid.md  features.md
src/: main.py  streamlit_app.py
src/ask_your_neighbour/: conversation_guardrail.py  conversation_state.py  document_store.py  file_info.py  gataway.py  gateway.py  geoportal.py  osm_agent.py  utils.py
src/ask_your_neighbour/agent_specs/: document_agent.py  guardrail_agent.py  orchestrator_agent.py  osm_agent.py  search_agent.py  summarization_agent.py
